--- a/BackEndAwsome/BackEndAwsome/appsettings.Development.json
+++ b/BackEndAwsome/BackEndAwsome/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+    "AllowedHosts": "*",
+
+  "ConnectionStrings": { "DefaultConnection": "Host=database-1.cisqkskacvfb.us-west-2.rds.amazonaws.com;Port=5432;Database=db26_landon_ginn;Username=landon_ginn;Password=77735765z438330550;SSL Mode=Require;Trust Server Certificate=true" }
 }
